<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/PayMayaVaultBackgroundBase"
    tools:context=".vault.internal.screen.TokenizeCardActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/payMayaVaultLogo"
                style="@style/PayMayaVaultLogoBase"
                android:contentDescription="@string/paymaya_vault_logo_content_description" />

            <TextView
                style="@style/PayMayaVaultCardDetailsLabelBase"
                android:text="@string/paymaya_vault_card_details" />

            <LinearLayout style="@style/PayMayaVaultFormBackgroundBase">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/payMayaVaultCardNumberTextInputLayout"
                    style="@style/PayMayaVaultTextInputLayout"
                    android:hint="@string/paymaya_vault_card_number"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/payMayaVaultCardNumberEditText"
                        style="@style/PayMayaVaultTextInputEditTextBase"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLength="23" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/payMayaVaultCardExpirationDateTextInputLayout"
                    style="@style/PayMayaVaultTextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_weight="3"
                    android:hint="@string/paymaya_vault_card_exp_date"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/payMayaVaultCardExpirationDateEditText"
                        style="@style/PayMayaVaultTextInputEditTextBase"
                        android:maxLength="5" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/payMayaVaultCardCvcTextInputLayout"
                    style="@style/PayMayaVaultTextInputLayout"
                    android:hint="@string/paymaya_vault_card_cvc"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/payMayaVaultCardCvcEditText"
                        style="@style/PayMayaVaultTextInputEditTextBase"
                        android:inputType="numberPassword"
                        android:maxLength="4" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <Button
                android:id="@+id/payMayaVaultPayButton"
                style="@style/PayMayaVaultPayButtonBase"
                android:text="@string/paymaya_vault_pay_button" />

        </LinearLayout>

    </ScrollView>

    <FrameLayout
        android:id="@+id/payMayaVaultProgressBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/paymaya_vault_progress_bar_background"
        android:clickable="true"
        android:focusable="true"
        android:visibility="gone"
        tools:visibility="visible">

        <ProgressBar style="@style/PayMayaVaultProgressbarBase" />

    </FrameLayout>

</FrameLayout>